fixed issues with responsoveness on small desktop screens

--- a/CSS/testimonial.scss
+++ b/CSS/testimonial.scss
@@ -9,7 +9,7 @@ main{
     display: grid;
     gap: 1.7rem;
     padding: 7rem;
-    max-width: 1000px;
+    // max-width: 1000px;
    
     grid-template-columns: repeat(8, 110px);
     grid-template-rows:repeat(2, 300px);
@@ -126,6 +126,7 @@ main{
     padding: 2rem;
     border-radius: 10px;
     overflow-y: auto;
+    box-shadow: 0 0 10px -6px $Very-dark-blackish-blue;
    h1{
     font-size: 1rem;
     line-height: 1.5rem;
